--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,7 @@ In a view
 
     ...
 
-It might be a good idea to put fields array into separate module or class.
+It might be a good idea to put fields array into a separate module or a class.
 
 If you using some nested fields you can set the field name as :'post.user_email'
 
